tests/negative/gold/import7_test.gold
tests/negative/import7_test.toit:3:20: error: Not at dedent
import http as foo import http as bar
                   ^~~~~~
Compilation failed.
